fixing element rendering style on mobile devices

--- a/src/components/items/items.scss
+++ b/src/components/items/items.scss
@@ -1,80 +1,80 @@
-.items{
-    
-//users
- .users{
+@import "../../index.css";
+
+.items {
+  //users
+  .users {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: minmax(100px,auto);
+    grid-auto-rows: minmax(100px, auto);
     grid-gap: 1.5em;
     justify-items: stretch;
     -webkit-align-items: stretch;
     align-items: stretch;
     margin-bottom: 3rem;
-}
-.user{
+  }
+  .user {
     position: relative;
     background: #fff;
-    border-radius: .428rem;
-}
-.top{
+    border-radius: 0.428rem;
+  }
+  .top {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 190px;
-    background: linear-gradient( 
-        1deg
-         , #623bf0, #886af4);
-         color: white;
-    margin: .5rem;
+    background: linear-gradient(1deg, #623bf0, #886af4);
+    color: white;
+    margin: 0.5rem;
     border-radius: 15px;
-}
-.photo-wrap{
+  }
+  .photo-wrap {
     height: 70px;
     width: 70px;
     margin-top: 1.5rem;
-}
-.photo-wrap > img{
+  }
+  .photo-wrap > img {
     height: 100%;
     width: 100%;
     border-radius: 50px;
-}
-.contact{
+  }
+  .contact {
     margin: 1rem 2rem;
-}
-.name, .age{
+  }
+  .name,
+  .age {
     text-align: center;
     padding: 0;
     margin-bottom: 0;
-}
-.name{
+  }
+  .name {
     font-weight: 400;
-}
-.age{
-  margin: 6px;
-  font-size: 14px;
+  }
+  .age {
+    margin: 6px;
+    font-size: --font-14;
     font-style: italic;
-}
-.email{
+  }
+  .email {
     font-size: 13px;
     color: #d4d4d4;
     font-weight: 600;
-}
-.email-wrap, .dob-wrap, .manager-wrap{
+  }
+  .email-wrap,
+  .dob-wrap,
+  .manager-wrap {
     display: flex;
     justify-content: space-between;
     margin-bottom: 1rem;
-
-}
-.title{
+  }
+  .title {
     font-size: 15px;
-    font-weight: 200;
+    font-weight: 500;
     color: #495057;
-}
-.desc{
+  }
+  .desc {
     color: #585adfcf;
     font-size: 14px;
     text-align: right;
     font-weight: 500;
-
-}
+  }
 }
