--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,10 @@
-
-
-
-
-
+:root{
+    --font-size-14: 14px;
+}
 *{
     padding: 0;
     margin: 0;
+
 }
 
 body {
